# salich-twitch-to-osu

./: Cargo.toml
src/: main.rs  map.rs  twitch.rs
src/map/: test.rs
src/osu/: client.rs  models.rs
