[package]
name = "salich-twitch-to-osu"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
tokio = { version = "1.42.0", features = ["full"] }
twitch-irc = "5.0.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
reqwest = "0.12.9"
config = { version = "0.14.1", features = ["json"] }
